discussion/kv_engine/133514/133514_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Move CB3ExecutorThread to own files

Move the CB3ExecutorThread class from executorthread.{cc,h} to it's
own cb3_executorthread.{cc,h} files.

Change-Id: I7871ae8cafc1861a650a86a85315c718c39f11b6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-30 14:38:00.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-30 15:23:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3617/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/cb3_executorthread.h b/engines/ep/src/cb3_executorthread.h
index 17e3306..36b8ecb 100644
--- a/engines/ep/src/cb3_executorthread.h
+++ b/engines/ep/src/cb3_executorthread.h
@@ -52,8 +52,7 @@ public:
      */
     class AtomicProcessTime {
     public:
-        AtomicProcessTime() {
-        }
+        AtomicProcessTime() = default;
         explicit AtomicProcessTime(
                 const std::chrono::steady_clock::time_point&amp; tp)
             : timepoint(tp) {
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3617/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorthread.h:55:9: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
        AtomicProcessTime() {
        ^                   ~
                            = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorthread.h:55:29: note: FIX-IT applied suggested code changes
        AtomicProcessTime() {
                            ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/cb3_executorthread.h b/engines/ep/src/cb3_executorthread.h
index 17e3306..36b8ecb 100644
--- a/engines/ep/src/cb3_executorthread.h
+++ b/engines/ep/src/cb3_executorthread.h
@@ -52,8 +52,7 @@ public:
      */
     class AtomicProcessTime {
     public:
-        AtomicProcessTime() {
-        }
+        AtomicProcessTime() = default;
         explicit AtomicProcessTime(
                 const std::chrono::steady_clock::time_point&amp; tp)
             : timepoint(tp) {
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29388/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\cb3_executorpool.h(257): error C3646: "_adjustWorkers": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29388/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3980/ : FAILURE

Failure of a CTest test [2020-07-30T14:47:48.201Z] 150/410 Test #398: memcached_testapp.ep.TransportProtocols/TouchTest ...........................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3980/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25444/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2132/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4951/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4867/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5051/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12767/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
